added short instructions

--- a/speech-instructions/.gitignore
+++ b/speech-instructions/.gitignore
@@ -4,6 +4,8 @@ embedding*
 *.jsonl
 dedup-parliament
 dedup-podcasts
+dedup-others
 partition-instructions-part*
 tatabahasa*
 mallm*
+short-coding-*
